tracing/skywalking/kubernetes/release-name-skywalking-oap-deploy.yml
# Source: skywalking/templates/oap-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: release-name
    chart: skywalking-4.2.0
    component: "oap"
    heritage: Helm
    release: release-name
  name: release-name-skywalking-oap
spec:
  replicas: 2
  selector:
    matchLabels:
      app: release-name
      component: "oap"
      release: release-name
  template:
    metadata:
      labels:
        app: release-name
        component: "oap"
        release: release-name
    spec:
      serviceAccountName: release-name-skywalking-oap
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            podAffinityTerm:
              topologyKey: kubernetes.io/hostname
              labelSelector:
                matchLabels:
                  app: "release-name"
                  release: "release-name"
                  component: "oap"
      containers:
      - name: oap
        image: skywalking.docker.scarf.sh/apache/skywalking-oap-server:8.8.1
        imagePullPolicy: IfNotPresent
        livenessProbe:
          tcpSocket:
            port: 12800
          initialDelaySeconds: 15
          periodSeconds: 20
        readinessProbe:
          tcpSocket:
            port: 12800
          initialDelaySeconds: 15
          periodSeconds: 20
        ports:
        - containerPort: 11800
          name: grpc
        - containerPort: 12800
          name: rest
        resources:
          limits:
            cpu: 8
            memory: 8Gi
          requests:
            cpu: 1
            memory: 2Gi
        volumeMounts:

      volumes:
