tracing/skywalking/kubernetes/release-name-skywalking-oap-svc.yml
# Source: skywalking/templates/oap-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-skywalking-oap
  labels:
    app: release-name
    chart: skywalking-4.2.0
    component: "oap"
    heritage: Helm
    release: release-name
spec:
  type: ClusterIP
  ports:
  - port: 11800
    name: grpc
  - port: 12800
    name: rest
  selector:
    app: release-name
    component: "oap"
    release: release-name
