tracing/skywalking/kubernetes/release-name-skywalking-ui-ingress.yml
# Source: skywalking/templates/ui-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: release-name
    chart: skywalking-4.2.0
    component: "ui"
    heritage: Helm
    release: release-name
  name: release-name-skywalking-ui
  annotations:
      kubernetes.io/ingress.class: "nginx-vpc"
spec:
  rules:
    - host: skywalking.local
      http:
        paths:
          - path: /
            backend:
              serviceName: release
